     implicit timeout from default zero (meaning blocking) to a positive
     value (or back to 0). Several NUT clients (`upsc`, `upscmd`, `upsrw`,
     `upslog`, `upsmon`, `upsimage`, `upsset` and `upsstats`) were updated
     to default with a 10-second timeout in case of name resolution lags or
     unresponsive hosts (notably a problem with `upsmon` contacting many
     remote systems at once). [#2847]

 - Several NUT clients including `upscmd`, `upsrw`, `upsimage`, `upsset`,
   `upsstats`, and `upslog` (during reconnection), did not `UPSCLI_CONN_TRYSSL`
   so went plaintext even when secure connections were possible. Fixed to at
   least try being secure, same way as `upsc` does for a long time. [#2847]

 - upsmon:
   * it was realized that the `POWERDOWNFLAG` must be explicitly set in the
     configuration file, there is no built-in default in the binary program
     (the settings facilitated by the `configure` script during build "only"
     impact the `upsmon.conf.sample`, init-scripts and similar files generated
     from templates). [issue #321, PR #2383]
   * added an `OBLBDURATION` (seconds) setting to optionally delay raising
     the alarm for immediate shutdown in critical situation. [#321]
   * optimized `parse_status()` by not checking further strings if we had
     a match; report unexpected tokens in debug log. [#415]
   * revised internal `do_notify()` method to support formatting strings
     with two `%s` placeholders, to use if certain use-cases pass any extra
     information (e.g. not just "we have alarms" but their values too). [#415]
   * introduced handling for "unknown" `ups.status` tokens, reporting them
     as "OTHER" notification type (whenever the set of such tokens appears
     or changes) or "NOTOTHER" when they disappear. [#415]

 - upslog:
   * Added support for limiting the loop count. Using in NIT (NUT Integration
     Test) suite for double profit (checking the tool and fallback in NIT).